chore: trying to fix github action